--- a/readme
+++ b/readme
@@ -1,4 +1,3 @@
-Dtnrf gh-pages нужна для публикации контента с использованием функции gh-pages Github.  
-
+Ветка gh-pages нужна для публикации контента с использованием функции gh-pages Github.  
 
 Здесь было описано как можно собирать статьи из разных репозиториев в одну кучу: https://sohabr.net/habr/post/292766/
